--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "umind",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A visual mind editor based on GGEditor and React",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config ./tools/webpack.config.dev.js --open",
+    "build": "webpack --config ./tools/webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,49 @@
     "url": "https://github.com/gaoli/UMind/issues"
   },
   "homepage": "https://github.com/gaoli/UMind#readme",
+  "dependencies": {
+    "gg-editor": "1.2.2",
+    "lodash": "^4.17.11",
+    "react": "^16.5.1",
+    "react-color": "^2.14.1",
+    "react-dom": "^16.5.1"
+  },
   "devDependencies": {
-    "cz-conventional-changelog": "^2.1.0"
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.1.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
+    "css-loader": "^1.0.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   },
   "config": {
     "commitizen": {
