--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umind",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "A visual mind editor based on GGEditor and React",
   "main": "dist/bundle.js",
   "scripts": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/gaoli/UMind#readme",
   "dependencies": {
+    "dva": "^2.4.0",
     "gg-editor": "1.2.2",
     "lodash": "^4.17.11",
     "react": "^16.5.1",
