--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umind",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A visual mind editor based on GGEditor and React",
   "main": "dist/bundle.js",
   "scripts": {
@@ -22,10 +22,11 @@
   "homepage": "https://github.com/gaoli/UMind#readme",
   "dependencies": {
     "dva-no-router": "^1.2.0",
-    "gg-editor": "1.2.5",
+    "gg-editor": "1.3.0",
     "lodash": "^4.17.11",
     "react": "^16.5.1",
     "react-color": "^2.14.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.1",
     "react-intl-universal": "^1.13.1"
   },
