--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umind",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A visual mind editor based on GGEditor and React",
   "main": "dist/bundle.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.1",
     "react-intl-universal": "^1.13.1",
+    "react-markdown": "^4.0.8",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
